# subsample-fasta

./: .gitignore  Cargo.toml
data/: small.fasta
src/: create_random_fasta.rs  create_random_fastq.rs  lib.rs  main.rs  subsample_fastq.rs
tests/: check_distribution.sh
tests/data/: README.md  small_10.fasta  small_10.fastq
